--- a/templates/auto_answer.html
+++ b/templates/auto_answer.html
@@ -1,6 +1,6 @@
 {% extends base.html %}
 {% block content %}
-<link rel="stylesheet" href="{{ path_to_static }}/css/style.css" type="text/css">
+<link rel="stylesheet" href="../static/css/style.css" type="text/css">
 <h4>
     Фамилия: {{ surname }}<br>
     Имя: {{ name }}<br>
