fixed distribution from request

--- a/templates/distribution.html
+++ b/templates/distribution.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<link rel="stylesheet" href="{{ path_to_static }}/css/style.css" type="text/css">
+<link rel="stylesheet" href="static/css/style.css" type="text/css">
 <h1 align="center"><b>Размещение по каютам</b></h1>
 {% for colonist in colonists %}
 <h4>{{ colonist }} - Каюта №{{ loop.index }}
