--- a/templates/auto_answer.html
+++ b/templates/auto_answer.html
@@ -1,4 +1,4 @@
-{% extends base.html %}
+{% extends 'base.html' %}
 {% block content %}
 <link rel="stylesheet" href="../static/css/style.css" type="text/css">
 <h4>
